# bot_noticias

./: .env.example  .env.render  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  TASKS.md  pyproject.toml  render.yaml
.idx/: dev.nix
ai/: __init__.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  auth.py  filters.py  (+6 more)
backend/app/core/: database.py  filters.py  security.py  telegram_utils.py
backend/app/models/: __init__.py  analytics_event.py  approval_queue.py  category.py  news.py  publication_log.py  scraper_log.py  source.py  system_config.py  telegram_channel.py  user.py
backend/app/schemas/: category.py  news.py  source.py  stats.py  system_config.py  telegram_channel.py  user.py
config/: filters.yaml
config/sources/: rss.yaml
data/: telegram_scraper.session
database/: init.sql
database/migrations/: 002_add_football_matches.sql
database/seeds/: admin_user.sql  categories.sql  seed_sources.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataTable.tsx  Modal.tsx  StatusBadge.tsx
frontend/src/hooks/: useAuth.tsx  useToast.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: ApprovalQueue.tsx  Categories.tsx  Dashboard.tsx  Login.tsx  NewsList.tsx  Settings.tsx  Sources.tsx
scripts/: auth_telegram.py  clean_existing_news.py  publish_pending.py  run.py  seed_gnews.sql  seed_sources.py  seed_sources.sh  start.sh  test_pipeline.py
tests/: test_auth.py
workers/: main.py
workers/daily_reports/: morning_briefing.py
workers/live_updates/: football_monitor.py
workers/pipeline/: __init__.py  deduplicator.py  image_fetcher.py
workers/publishers/: __init__.py  epm_publisher.py  facebook_publisher.py  telegram_publisher.py
workers/scrapers/: __init__.py  base.py  rss_scraper.py  scrapling_scraper.py  telegram_scraper.py
