[project]
name = "noticiando-pe"
version = "0.1.0"
description = "Bot de agregación de noticias para Telegram - @noticiando_pe_bot"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",

    # Scraping
    "beautifulsoup4>=4.12.0",
    "scrapling>=0.4.0",
    "lxml>=5.2.0",
    "feedparser>=6.0.11",
    "pyyaml>=6.0",
    "gnews>=0.2.0",

    # Email validation (pydantic depende de esto)
    "email-validator>=2.1.0",

    # Telegram
    "python-telegram-bot>=21.3.0",
    "telethon>=1.36.0",

    # Task Scheduling
    "apscheduler>=3.10.4",

    # Media
    "Pillow>=10.3.0",
    "cloudinary>=1.40.0",

    # Utils
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "tenacity>=8.2.0",
    "slowapi>=0.1.9",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "workers*", "ai*"]
namespaces = false

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
